--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,93 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display:block;
+    text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
-/* Acá va tu código */
+#ejercicioDos{
+    display: none;
+}
 
 
 
 /* Ejercicio 3: */
 
-/* Acá va tu código */
+#ejercicioTres{
+position:absolute;
+margin-top: 100px;
+margin-left: 200px;
+
+}
 
 
 
 /* Ejercicio 4: */
 
-/* Acá va tu código */
+#ejercicioCuatro{
+    position: fixed;
+    top: 0%;
+    left:0%;
+    z-index: 2;
+
+}
 
 
 
 /* Ejercicio 5: */
 
-/* Acá va tu código */
+#ejercicioCinco{
+display: flex;
+justify-content: space-around;
+align-items:center;
+flex-direction: row-reverse;
+
+
+}
 
 
 
 /* Ejercicio 6. */
+
+#ejercicioSiete{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+    
+    
+}
+    
+#elementoUno{
+    display: flex;
+    flex-direction: row;
+    align-self: flex-start;
+    background-color: green ;
+    width: 300px;
+    justify-content: center;
+   
+    
+
+}
+#elementoDos{
+    width: 300px;
+    background-color: orange;
+    justify-content: center;
+}
+#elementoTres{
+    background-color: blue;
+    width: 300px;
+    justify-content: center;
+}
+#elementoCuatro{
+    display: flex;
+    flex-direction: row;
+    width: 300px;
+    align-self: flex-end;
+    background-color: red;
+    justify-content: center;
+    
+}
